@@ -1,10 +1,11 @@
 package com.amoeslund.whatshouldieat.controllers.modelassemblers;
 
 import com.amoeslund.whatshouldieat.controllers.RecipeController;
-import com.amoeslund.whatshouldieat.models.Recipe;
+import com.amoeslund.whatshouldieat.repositories.entities.Recipe;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.server.RepresentationModelAssembler;
+import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
@@ -17,7 +18,7 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 @Component
 
-public class RecipeModelAssembler implements RepresentationModelAssembler<com.amoeslund.whatshouldieat.repositories.entities.Recipe, EntityModel<Recipe>> {
+public class RecipeModelAssembler implements RepresentationModelAssembler<Recipe, EntityModel<com.amoeslund.whatshouldieat.models.Recipe>> {
 
     private final RecipeTagModelAssembler recipeTagModelAssembler;
 
@@ -26,18 +27,18 @@ public class RecipeModelAssembler implements RepresentationModelAssembler<com.am
     }
 
     @Override
-    public EntityModel<Recipe> toModel(com.amoeslund.whatshouldieat.repositories.entities.Recipe recipe) {
+    public EntityModel<com.amoeslund.whatshouldieat.models.Recipe> toModel(Recipe recipe) {
 
-        List<EntityModel<Recipe.RecipeTag>> tagModels = recipe.getRecipeTags().stream().map(recipeTagModelAssembler::toModel).collect(Collectors.toList());
-        List<Recipe.RecipeStat> recipeStats = recipe.getRecipeStats().stream().map(recipeStat -> new Recipe.RecipeStat(recipeStat.getLabel(), recipeStat.getDescription())).toList();
-        Recipe recipeDto = new Recipe(recipe.getId(), recipe.getName(), recipeStats, recipe.getImage(), tagModels, recipe.getUrl());
-        return EntityModel.of(recipeDto, linkTo(methodOn(RecipeController.class).one(recipeDto.id())).withSelfRel(), linkTo(methodOn(RecipeController.class).all()).withRel("recipes"));
+        List<EntityModel<com.amoeslund.whatshouldieat.models.Recipe.RecipeTag>> tagModels = recipe.getRecipeTags().stream().map(recipeTagModelAssembler::toModel).collect(Collectors.toList());
+        List<com.amoeslund.whatshouldieat.models.Recipe.RecipeStat> recipeStats = recipe.getRecipeStats().stream().map(recipeStat -> new com.amoeslund.whatshouldieat.models.Recipe.RecipeStat(recipeStat.getLabel(), recipeStat.getDescription())).toList();
+        com.amoeslund.whatshouldieat.models.Recipe recipeDto = new com.amoeslund.whatshouldieat.models.Recipe(recipe.getId(), recipe.getName(), recipeStats, recipe.getImage(), tagModels, recipe.getUrl());
+        return EntityModel.of(recipeDto, WebMvcLinkBuilder.linkTo(methodOn(RecipeController.class).one(recipeDto.id())).withSelfRel(), linkTo(methodOn(RecipeController.class).all()).withRel("recipes"));
     }
 
     @Override
-    public CollectionModel<EntityModel<Recipe>> toCollectionModel(Iterable<? extends com.amoeslund.whatshouldieat.repositories.entities.Recipe> entities) {
-        List<EntityModel<Recipe>> recipes = new ArrayList<>();
-        for (com.amoeslund.whatshouldieat.repositories.entities.Recipe entity : entities) {
+    public CollectionModel<EntityModel<com.amoeslund.whatshouldieat.models.Recipe>> toCollectionModel(Iterable<? extends Recipe> entities) {
+        List<EntityModel<com.amoeslund.whatshouldieat.models.Recipe>> recipes = new ArrayList<>();
+        for (Recipe entity : entities) {
             recipes.add(toModel(entity));
         }
         return CollectionModel.of(recipes, linkTo(methodOn(RecipeController.class).all()).withSelfRel());
